<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hpc_io</name>
  <version>1.0.0</version>
  <description>
    ROS2 packages for the HPC IO (meta package)
  </description>
  <maintainer email="kmw2622@koreatech.ac.kr">Minwoo Kim</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hpc_io_description</exec_depend>
  <exec_depend>tracer_ros2</exec_depend>
  <exec_depend>ugv_sdk</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
